--- a/odoo/odoo.conf
+++ b/odoo/odoo.conf
@@ -1,8 +1,9 @@
 [options]
 db_user = odoo
 db_password = 123
-addons_path = /home/mostafa/Desktop/odoo/odoo18/addons,
-	/home/mostafa/Desktop/odoo/odoo18/odoo/addons,
-	/home/mostafa/Desktop/odoo/odoo18/odoo/custom_addons
+db_host = localhost
+db_port = 5432
+xmlrpc_port = 8069
+addons_path = /home/mostafa/Desktop/odoo/odoo18/addons,/home/mostafa/Desktop/odoo/odoo18/odoo/addons,/home/mostafa/Desktop/odoo/odoo18/odoo/custom_addons
 admin_passwd = $pbkdf2-sha512$600000$WmtNibF2LqX03vv/v7fWmg$YSyO/KCwjWFJXRDZEn0VqSUAv.hMtchM4ShJOPBTldEpgiObxpem.xxAZDXWvYNHNMPgkdQ9J0iJL4RJCj4gnQ
 
